--- a/bsquareblog.html
+++ b/bsquareblog.html
@@ -755,6 +755,9 @@
 </script>
 
 <body>
+    <div class="preloader">
+        <img src="./images/logo.JPG" alt="bsquare-loader-logo">
+    </div>
     <nav class="navbar navbar-expand-lg navbar-fixed-top py-0" aria-label="Offcanvas navbar large">
         <div class="container-fluid" id="nav_container">
             <div class="container main_nav_container justify-content-center">
@@ -819,7 +822,7 @@
         <div class="carousel-inner">
 
             <div class="carousel-item active" data-bs-interval="7000">
-                <img src="./images/backposters/b8.JPG" class="d-block w-100" alt="...">
+                <img src="./images/backposters/b9.JPG" class="d-block w-100" alt="...">
                 <div class="carousel-caption px-md-5">
                     <h5>Bsquare's Coworking Insights</h5>
                     <hr class="bg-light border-4 border-top border-light">
@@ -1045,6 +1048,15 @@
         crossorigin="anonymous"></script>
 
     <script>
+          $(document).ready(function () {
+            // Simulate a delay (2 seconds in this case)
+            setTimeout(function () {
+                const preloader = $(".preloader");
+                preloader.fadeOut(200); // Fade out the preloader
+                const content = $(".content");
+                content.removeClass("hidden"); // Show the website content
+            }, 1500); // 2 seconds in milliseconds (2000 ms)
+        });
         var btn = $('#button');
 
         $(window).scroll(function () {
