--- a/bsquare-blog.html
+++ b/bsquare-blog.html
@@ -311,7 +311,7 @@
                         </div>
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="./westgate-img/bsquare-westgate-img9.jpg" width="100%" alt="">
+                            <img src="./images/bsquare-westgate-img9.webp" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
@@ -426,7 +426,7 @@
                         </div>
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="./images/01.jpg" width="100%" alt="">
+                            <img src="./images/01.webp" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
@@ -563,7 +563,7 @@
                         </div>
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="./westgate-img/bsquare-westgate-img9.jpg" width="100%" alt="">
+                            <img src="./images/bsquare-westgate-img9.webp" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
@@ -706,7 +706,7 @@
                     <div class="recent-blogs">
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="./images/01.jpg" width="100%" alt="">
+                            <img src="./images/01.webp" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
@@ -717,7 +717,7 @@
                         </div>
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="./westgate-img/bsquare-westgate-img9.jpg" width="100%" alt="">
+                            <img src="./images/bsquare-westgate-img9.webp" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
@@ -886,7 +886,7 @@
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <img src="./images/01.webp" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
                                         <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
@@ -894,7 +894,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                        <img src="./images/bsquare-westgate-img9.webp" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
                                             Workspaces...</h6>
