--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                                     <div class="card-flyer">
                                         <div class="text-box">
                                             <div class="image-box">
-                                                <img src="./sindhubhawan-img/sindhubhawan-img-8.jpg" alt="bsqaure_office_space" />
+                                                <img src="./sindhubhawan-img/sindhubhawan-img-8.webp" alt="bsqaure_office_space" />
                                             </div>
                                             <div class="text-container">
                                                 <h6>Office Space
@@ -710,7 +710,7 @@
                                     <div class="card-flyer">
                                         <div class="text-box">
                                             <div class="image-box">
-                                                <img src="./images/coworking.JPG" alt="bsqaure_coworking_space" />
+                                                <img src="./images/coworking.jpg" alt="bsqaure_coworking_space" />
                                             </div>
                                             <div class="text-container">
                                                 <h6>Coworking Space</h6>
@@ -1077,7 +1077,7 @@
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <img src="./images/01.webp" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
                                         <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
@@ -1085,7 +1085,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                        <img src="./images/bsquare-westgate-img9.webp" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
                                             Workspaces...</h6>
