--- a/prahlad-nagar.html
+++ b/prahlad-nagar.html
@@ -295,21 +295,21 @@
         <div class="container">
             <div id="gallery" class="container-fluid">
                 <div class="popup">
-                    <img src="./westgate-img/bsquare-westgate-img1.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img2.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img3.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img4.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img5.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img6.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img7.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img8.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img9.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img10.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img11.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img12.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img13.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img14.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
-                    <img src="./westgate-img/bsquare-westgate-img15.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img1.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img2.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img3.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img4.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img5.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img6.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img7.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img8.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img9.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img10.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img11.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img12.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img13.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img14.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img15.webp" class="img-responsive" alt="prahladnagar-img-bsquare">
                 </div>
                 <div class="showover">
                     <div class="overlay"></div>
@@ -364,7 +364,7 @@
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <img src="./images/01.webp" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
                                         <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
@@ -372,7 +372,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                        <img src="./images/bsquare-westgate-img9.webp" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
                                             Workspaces...</h6>
