--- a/s.g.road.html
+++ b/s.g.road.html
@@ -337,34 +337,32 @@
                     <img src="./s.g.road-img/s.g-road-img5.webp" class="img-responsive" alt="s.g.road_img">
                     <img src="./s.g.road-img/s.g-road-img6.webp" class="img-responsive" alt="s.g.road_img">
                     <img src="./s.g.road-img/s.g-road-img7.webp" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img8.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img9.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img10.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img11.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img12.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img13.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img14.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img15.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img16.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img17.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img18.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img19.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img20.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img21.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img22.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img23.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img24.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img25.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img26.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img27.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img28.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img29.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img30.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img31.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img32.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img33.jpg" class="img-responsive" alt="s.g.road_img">
-                    <img src="./s.g.road-img/s.g-road-img34.jpg" class="img-responsive" alt="s.g.road_img">
-
+                    <img src="./s.g.road-img/s.g-road-img8.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img9.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img10.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img11.webp" class="img-responsive" alt="s.g.road_img">
+                    
+                    <img src="./s.g.road-img/s.g-road-img13.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img14.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img15.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img16.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img17.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img18.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img19.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img20.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img21.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img22.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img23.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img24.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img25.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img26.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img27.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img28.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img29.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img30.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img31.webp" class="img-responsive" alt="s.g.road_img">
+                    <img src="./s.g.road-img/s.g-road-img32.webp" class="img-responsive" alt="s.g.road_img">
+                    
 
                 </div>
                 <div class="showover">
@@ -422,7 +420,7 @@
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <img src="./images/01.webp" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
                                         <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
@@ -430,7 +428,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                        <img src="./images/bsquare-westgate-img9.webp" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
                                             Workspaces...</h6>
