--- a/blogs.html
+++ b/blogs.html
@@ -281,7 +281,7 @@
                 </div>
                 <div class="col-xl-6 col-md-12">
                     <div class="m-auto">
-                        <img src="./images/01.jpg"
+                        <img src="./images/01.webp"
                             style="box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.20) !important; margin: auto; border-radius: 19px;"
                             width="100%" alt="bsquare-img"><br><br>
                     </div>
@@ -292,7 +292,7 @@
             <div class="row pt-5">
                 <div class="col-xl-6 col-md-12">
                     <div class="m-auto">
-                        <img src="./westgate-img/bsquare-westgate-img9.jpg"
+                        <img src="./images/bsquare-westgate-img9.webp"
                             style="box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.20) !important; margin: auto; border-radius: 19px;"
                             width="100%" alt="bsquare-img"> <br><br>
                     </div>
@@ -388,7 +388,7 @@
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <img src="./images/01.webp" class="d-block w-100" alt="bsquare-blog-img">
                                         <br>
                                         <h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE
                                             Coworking Space...</h6>
@@ -398,7 +398,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                        <img src="./images/bsquare-westgate-img9.webp" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">The Co-working Revolution:
                                             Transforming Real Estate and Redefining
