--- a/navrangpura.html
+++ b/navrangpura.html
@@ -334,7 +334,7 @@
         <div class="container">
             <div id="gallery" class="container-fluid">
                 <div class="popup">
-                    <img src="./navrangpura-img/navrangpura-img1.jpg" class="img-responsive" alt="navrangpura-img-bsquare">
+                    <img src="./navrangpura-img/navrangpura-img1.webp" class="img-responsive" alt="navrangpura-img-bsquare">
                     <img src="./navrangpura-img/navrangpura-img2.webp" class="img-responsive" alt="navrangpura-img-bsquare">
                     <img src="./navrangpura-img/navrangpura-img3.webp" class="img-responsive" alt="navrangpura-img-bsquare">
                     <img src="./navrangpura-img/navrangpura-img4.webp" class="img-responsive" alt="navrangpura-img-bsquare">
@@ -393,7 +393,7 @@
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <img src="./images/01.webp" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
                                         <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
@@ -401,7 +401,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                        <img src="./images/bsquare-westgate-img9.webp" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
                                             Workspaces...</h6>
