--- a/sindhu-bhawan.html
+++ b/sindhu-bhawan.html
@@ -333,26 +333,26 @@
         <div class="container">
             <div id="gallery" class="container-fluid">
                 <div class="popup">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-1.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-2.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-3.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-4.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-5.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-6.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-7.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-8.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-9.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-10.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-11.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-12.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-13.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-14.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-15.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-16.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-17.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-18.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-19.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-20.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-1.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-2.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-3.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-4.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-5.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-6.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-7.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-8.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-9.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-10.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-11.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-12.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-13.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-14.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-15.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-16.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-17.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-18.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-19.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-20.webp" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
                 </div>
                 <div class="showover">
                     <div class="overlay"></div>
@@ -407,7 +407,7 @@
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <img src="./images/01.webp" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
                                         <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
@@ -415,7 +415,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                        <img src="./images/bsquare-westgate-img9.webp" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
                                             Workspaces...</h6>
