--- a/workspace.html
+++ b/workspace.html
@@ -506,7 +506,7 @@
                             <div class="card-flyer">
                                 <div class="text-box">
                                     <div class="image-box">
-                                        <img src="./westgate-img/bsquare-westgate-img7.jpg" alt="bsquare-meeting-space" />
+                                        <img src="./westgate-img/bsquare-westgate-img7.webp" alt="bsquare-meeting-space" />
                                     </div>
 
                                     <div class="text-container text-start">
@@ -530,7 +530,7 @@
                             <div class="card-flyer">
                                 <div class="text-box">
                                     <div class="image-box">
-                                        <img src="./sindhubhawan-img/sindhubhawan-img-1.jpg" alt="bsquare-meeting-space" />
+                                        <img src="./sindhubhawan-img/sindhubhawan-img-1.webp" alt="bsquare-meeting-space" />
 
                                     </div>
                                     <div class="text-container text-start">
@@ -843,7 +843,7 @@
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <img src="./images/01.webp" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
                                         <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
@@ -851,7 +851,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                        <img src="./images/bsquare-westgate-img9.webp" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
                                             Workspaces...</h6>
