--- a/careers.html
+++ b/careers.html
@@ -222,18 +222,18 @@
             </div>
         </div>
     </nav>
-    <div id="header">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images/backposters/b9.JPG" class="d-block w-100" alt="...">
-                    <div class="title">
-                        <h1 class="animated slideInDown"><span>If you want to be a part of our amazing professional
-                                eco-system then you have come on the right page. </span></h1>
-                        <h2 class="animated slideInLeft"></h2>
-                    </div>
-                </div>
+    <div id="mainBanner" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <div class="carousel-inner">
 
+            <div class="carousel-item active" data-bs-interval="7000">
+                <img src="./images/backposters/b9.JPG" class="d-block w-100" alt="...">
+                <div class="carousel-caption px-md-5">
+                    <h5>If you want to be a part of our amazing professional 
+                        <br>eco-system then you have come on the right page.
+                    </h5>
+                    <hr class="bg-light border-4 border-top border-light">
+
+                </div>
             </div>
 
         </div>
