--- a/careers.html
+++ b/careers.html
@@ -164,9 +164,9 @@
     <nav class="navbar navbar-expand-lg navbar-fixed-top py-0" aria-label="Offcanvas navbar large">
         <div class="container-fluid" id="nav_container">
             <div class="container main_nav_container justify-content-center">
-                <div class="d-flex flex-row justify-content-between ">
+                <div class="d-flex flex-row justify-content-between inner_div">
                     <a class="navbar-brand" href="index.html">
-                        <img src="./images/BSquare logo without bg.png" alt=""></a>
+                        <img src="./images/BSquare logo without bg.png" alt="Bsquare"></a>
                     <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
                         <span class="bi bi-list "></span>
@@ -184,12 +184,16 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown2" role="button"
-                                    aria-haspopup="true" aria-expanded="false" type="button" data-bs-toggle="dropdown">
+
+
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
+                                    aria-haspopup="true" aria-expanded="false" type="button"
+                                    data-bs-toggle="dropdown">
                                     Locations
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                    <a class="dropdown-item" href="./prahlad-nagar.html">Prahlad Nagar Corporate Road</a>
+                                    <a class="dropdown-item" href="./prahlad-nagar.html">Prahlad Nagar Corporate
+                                        Road</a>
                                     <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
 
                                     <a class="dropdown-item" href="./iim-a-road.html">IIM A Road</a>
