--- a/careers.html
+++ b/careers.html
@@ -158,6 +158,7 @@
 </style>
 
 <body>
+    
     <div class="preloader">
         <img src="./images/logo.JPG" alt="Preloader Image">
     </div>
@@ -226,6 +227,7 @@
             </div>
         </div>
     </nav>
+
     <div id="mainBanner" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
         <div class="carousel-inner">
 
@@ -235,7 +237,7 @@
                     <h5>If you want to be a part of our amazing professional 
                         <br>eco-system then you have come on the right page.
                     </h5>
-                    <hr class="bg-light border-4 border-top border-light">
+                    <!-- <hr class="bg-light border-4 border-top border-light"> -->
 
                 </div>
             </div>
