--- a/blogs.html
+++ b/blogs.html
@@ -221,9 +221,9 @@
 
             <div class="carousel-item active" data-bs-interval="7000">
                 <img src="./images/backposters/b8.JPG" class="d-block w-100" alt="...">
-                <div class="carousel-caption px-md-5">
-                    <h5>Bsquare's Coworking Insights</h5>
-                    <hr class="bg-light border-4 border-top border-light">
+                <div class="carousel-caption px-md-5" id="blog_animation">
+                    <h5 >Bsquare's Coworking Insights</h5>
+                    <!-- <hr class="bg-light border-4 border-top border-light"> -->
 
                 </div>
             </div>
@@ -553,7 +553,7 @@
         crossorigin="anonymous"></script>
 
     <script>
-          $(document).ready(function () {
+        $(document).ready(function () {
             // Simulate a delay (2 seconds in this case)
             setTimeout(function () {
                 const preloader = $(".preloader");
