--- a/faq.html
+++ b/faq.html
@@ -319,7 +319,7 @@
                 <img src="./images/backposters/b10.JPG" class="d-block w-100" alt="...">
                 <div class="carousel-caption px-md-5">
                     <h5>Frequently asked questions to solve all your queries</h5>
-                    <hr class="bg-light border-4 border-top border-light">
+                    <!-- <hr class="bg-light border-4 border-top border-light"> -->
 
                 </div>
             </div>
