--- a/careers.html
+++ b/careers.html
@@ -233,7 +233,7 @@
 
             <div class="carousel-item active" data-bs-interval="7000">
                 <img src="./images/backposters/b9.JPG" class="d-block w-100" alt="...">
-                <div class="carousel-caption px-md-5">
+                <div class="carousel-caption px-md-5" id="blog_animation">
                     <h5>If you want to be a part of our amazing professional 
                         <br>eco-system then you have come on the right page.
                     </h5>
