--- a/faq.html
+++ b/faq.html
@@ -317,7 +317,7 @@
 
             <div class="carousel-item active" data-bs-interval="7000">
                 <img src="./images/backposters/b10.JPG" class="d-block w-100" alt="...">
-                <div class="carousel-caption px-md-5">
+                <div class="carousel-caption px-md-5" id="blog_animation">
                     <h5>Frequently asked questions to solve all your queries</h5>
                     <!-- <hr class="bg-light border-4 border-top border-light"> -->
 
